monitoring/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"

   # session affinity
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"

    # Timeouts
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "120"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
       - nabd-hospital.nabawi.me
      secretName: hospital-tls-secret
  rules:
    - host: nabd-hospital.nabawi.me
      http:
        paths:
          - path: /grafana-dashboard
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 80

          - path: /alert-dashboard
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-alertmanager
                port:
                  number: 9093

          - path: /prom-dashboard
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-prometheus
                port:
                  number: 9090
